2015-11-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-alpha02 final changes';git push
	git tag -a 4.5.4-alpha02 -m 'Version 4.5.4-alpha02 new features: crd xcs, skl bug, GSL2';git push --tags

	* Correct whitespace when excising dimension names from "coordinates" attribute	in nco_cnv_cf_cll_mth_add() after dimension reduction operations

2015-11-18  Charlie Zender  <zender@uci.edu>

	* Expose interpolation algorithm to sld_nco.sh with -a (bilinear|patch|neareststod|nearestdtos|conserve)

	* Only pass variable list to ncks in regridding phase of sld_nco.sh

	* Add nTimes and nXtrack to usual suspect list for lat/lon to support OMI L2 data

2015-11-17  Charlie Zender  <zender@uci.edu>

	* Merge Wenshan's patch to accept CICE dimensions TLAT,ULAT,TLONG,ULONG

	* Add latt_bounds, latu_bounds, lont_bounds, lonu_bounds to regrid exclusion list (for CICE) as per Wenshan

	* Initialize lat/lon/col_nm_out in nco_grd_mk() skeleton code (broken in 4.5.3?)

2015-11-12  Charlie Zender  <zender@uci.edu>

	* Remove "l" suffix from NC_LONG integer constants (which are deprecated) so buggy ncgen 4.4.0 can parse in.cdl

2015-11-09  Charlie Zender  <zender@uci.edu>

	* Thoroughly run autoconf to propagate GSL changes

2015-11-08  Charlie Zender  <zender@uci.edu>

	* Add hyai, hybi to in.cdl and prs_dlt example to manual

2015-11-08  Henry Butowsky  <henryb@hush.com>

	* Support GSL library version 2.x. Modify configure.ac, config.h.in. Add tokens:
          #define NCO_GSL_VERSION = 100 * NCO_GSL_MAJOR_VERSION + NCO_GSL_MINOR_VERSION

	* Downstream GSL mods in fmc_gsl_cls.cc, fmc_gsl_cls.hh

2015-10-30  Charlie Zender  <zender@uci.edu>

	* Add stdin infrastructure for passing regridding file list

	* NCO 4.5.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-alpha01 final changes';git push
	git tag -a 4.5.4-alpha01 -m 'Version 4.5.4-alpha01 tag:	100% Geometry';git push --tags
